--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
       "XiNG\\eWAY\\": "src/"
     },
     "classmap": [
-      "src/XiNG/eWAY/eWAY.php"
+      "src/eWAY.php"
     ]
   },
   "autoload-dev": {
